[package]
name = "crypt_guard"
version = "0.1.0"
edition = "2021"
description = "CryptGuardLib is a comprehensive Rust library designed for strong encryption and decryption, incorporating post-quantum cryptography to safeguard against quantum threats. It's geared towards developers who need to embed advanced cryptographic capabilities in their Rust applications."
license = "MIT"
repository = "https://github.com/mm9942/crypt_guard_py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypt_guard = "1.3.6"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
